--- a/.github/workflows/cd_release.yml
+++ b/.github/workflows/cd_release.yml
@@ -44,6 +44,10 @@ jobs:
 #        run: go build -v ./...
         run: go build -v -o cau_go main.go
 
+      - name: Rename file
+        if: ${{ matrix.goos == 'windows' }}
+        run: mv cau_go cau_go.exe
+
       - name: GetVersion
         run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
 
